clapi_macros/test_suite/tests/ui/fail/invalid_arg_value/invalid_arg_default.rs
use clapi::macros::*;

#[command]
#[arg(x, default="10")]
fn app(x: i64){}

fn main(){}