clapi_macros/test_suite/tests/ui/fail/invalid_arg_value/invalid_arg_default.stderr
error: custom attribute panicked
 --> $DIR/invalid_arg_default.rs:3:1
  |
3 | #[command]
  | ^^^^^^^^^^
  |
  = help: message: expected integer default value for `x` but was `10`
